--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,15 @@
         "no-lone-blocks": "off",
         "no-restricted-syntax": "off",
         "max-len": ["error", {"code":200}],
-        "valid-jsdoc": [ "error", {"prefer": {"return":"returns"} } ]
+        "valid-jsdoc": [ "error", {"prefer": {"return":"returns"} } ],
+        "jsdoc/no-undefined-types": [1, {
+            "definedTypes": [
+              "debug",
+              "is-it-check",
+              "events",
+              "https",
+              "crypto"
+            ]
+          }]
     }
 }
