--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^4.3.4",
+    "grumptech-astrodata": "^1.0.0",
     "is-it-check": "^1.0.12"
   },
   "devDependencies": {
