--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "test": "NODE_OPTIONS=\"--experimental-vm-modules --trace-warnings\" npx jest --testTimeout=65000"
   },
   "engines": {
-    "homebridge": ">=1.6.0"
+    "homebridge": "^1.6.0 || ^2.0.0-beta.0"
   },
   "repository": {
     "type": "git",
