--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homebridge-grumptech-timetriggers",
   "displayName": "Homebridge Time Triggers",
-  "version": "1.4.4",
+  "version": "1.4.5",
   "description": "Time-based triggers for use with Homebridge",
   "type": "module",
   "main": "dist/homebridge-grumptech-timetriggers.js",
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "clean": "setopt localoptions rmstarsilent; rm -rf ./dist/*; rm -rf ./docs/*",
-    "prepare": "npm run docs; npm run build",
+    "prepare": "npm run docs; npm run build; npm run test",
     "build_dbg": "npx webpack --mode=development",
     "build": "npm run clean; npm run docs; npx webpack --mode=production",
     "docs": "docDir='./docs'; [[ -e \"$docDir\" ]] && rm -rf \"$docDir/\"*; mkdir -p ./pages; wait; cp ./security.md ./pages/; wait; cp ./license.md ./pages/; wait; npx jsdoc -c ./jsdoc.conf.json --destination \"$docDir/\"",
@@ -60,21 +60,24 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^4.3.4",
-    "grumptech-astrodata": "^1.1.1",
-    "is-it-check": "^1.0.12"
+    "grumptech-astrodata": "^1.1.3",
+    "is-it-check": "^1.1.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.39.1",
     "docdash": "^2.0.2",
-    "eslint": "^9.17.0",
+    "eslint": "^9.39.1",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsdoc": "^54.1.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsdoc": "^61.1.12",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^7.2.1",
-    "jest": "^30.1.1",
-    "jsdoc": "^4.0.2",
-    "string-replace-loader": "^3.1.0",
-    "webpack": "^5.97.1",
+    "globals": "^16.5.0",
+    "jest": "^30.2.0",
+    "jsdoc": "^4.0.5",
+    "string-replace-loader": "^3.2.0",
+    "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1"
   }
 }
